<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
tools:context=".activities.NovoServiceFragment">

<TextView
    android:id="@+id/services_txt_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:text="@string/services_txt_titulo"
    android:textColor="@color/black"
    android:textSize="34sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.074" />

<TextView
    android:id="@+id/services_txt_subtitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:text="@string/services_txt_subtitulo"
    android:textColor="@color/grafite_700"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/services_txt_title"
    app:layout_constraintVertical_bias="0.0" />


<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@+id/services_btn_create"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/services_txt_subtitle"
    app:layout_constraintVertical_bias="0.0">

    <TextView
        android:id="@+id/services_txt_service_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/services_txt_service_titulo"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/services_edt_service_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/grafite_200"
        android:ems="10"
        android:hint="@string/services_txt_service_titulo_hint"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/yellow_200"
        android:textColorHighlight="@color/yellow_900"
        android:textColorHint="@color/yellow_900" />

    <TextView
        android:id="@+id/services_txt_service_custo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/services_txt_service_custo"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/services_edt_service_custo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/grafite_200"
        android:ems="10"
        android:hint="@string/services_txt_service_custo_hint"
        android:inputType="number"
        android:padding="16dp"
        android:textColor="@color/yellow_200"
        android:textColorHint="@color/yellow_900" />

    <TextView
        android:id="@+id/services_txt_service_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/services_txt_service_descricao"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/services_edt_service_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/grafite_200"
        android:ems="10"
        android:hint="@string/services_txt_service_descricao_hint"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/yellow_200"
        android:textColorHint="@color/yellow_900" />


</LinearLayout>

<Button
    android:id="@+id/services_btn_create"
    android:layout_width="wrap_content"
    android:layout_height="75dp"
    android:layout_marginBottom="8dp"
    android:backgroundTint="@color/grafite_200"
    android:fontFamily="sans-serif"
    android:text="@string/services_btn_criar"
    android:textColor="@color/yellow_200"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.807" />

</androidx.constraintlayout.widget.ConstraintLayout>